Kentobot 5.0 (#12)
* Fix JS Error

* Fixed BTTVAPIv3

* Docs updates

* Improve guides page
Fixed active class not always applying on page load if menu parsing is slow
Added the ability to use the URI Hash to direct link specific guides

* twitchembeds guide

* Update toc.json

* Update twitchembeds.md

* Added support for remote panel getting webauth via cookie, skipping panelConfig

* Refactored docs/panel/login to support webauth cookie method
Removed default panelConfig from docs/panel
Updated docs/panel/js/utils/helpers to save the entire hashmap for all scripts to use
Added better feedback to docs/panel and docs/panel/login when the selectedbot hash parameter is missing
Added promisePoll to docs/panel/js/utils/helpers

* Setup WsPanelHandler for remote retrival without HTTP
Add TwitchCache.getDisplayName
Add new panelConfig for docs/panel

* Implemented WS load of panelSettings for docs/panel

* Update links for /game and /(get-)lang in /docs/panel

* Fix hashmap key check

* Fix WS load check

* Fix ajax order on docs/panel/login
Add debug output for /sslcheck and /checkwsload

* Updated docs/panel/index.js to use /sslcheck when initing ws
Fixed /sslcheck in /docs/panel/login
Added ability for ws to detect a 403/SSL Required resposne and switch

* Fix parsing of ws messages

* Fix Exception on remote wsload auth

* Fix remote socket message

* Fix main styles throughout /docs

* Fix missing quote

* Fix darkmode on /docs/panel

* Fix dataTables
Fix customizations to AdminLTE

* Fix typo

* Fix icon sizes

* Update skins

* Fix window location

* Fixed bot links
Fixed CORS missing from HttpSslRedirectHandler

* Fix null origin

* Default useHttps to false again

* Theme Update

* Update error messages for embeds on built-in copy of panel
Remove /checkwsload
Revert /docs version of panel to trying https first

* Add update guide

* Change status for WsSslErrorHandler to 426

* Fi